feat(商城): 代码优化
1. 优化首页接口响应速度
2. 优化商品详情接口响应速度
3. 优化分类接口响应速度
4. 优化注释