@@ -9,53 +9,76 @@ import com.wayn.common.core.domain.vo.VanTreeSelectVo;
 import com.wayn.common.core.service.shop.ICategoryService;
 import com.wayn.common.core.service.shop.IGoodsService;
 import com.wayn.common.util.R;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
+import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.Callable;
+import java.util.concurrent.FutureTask;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("category")
+@AllArgsConstructor
 public class CategoryController extends BaseController {
 
-    @Autowired
     private ICategoryService iCategoryService;
-
-    @Autowired
     private IGoodsService iGoodsService;
+    private ThreadPoolTaskExecutor categoryThreadPoolTaskExecutor;
 
     @GetMapping("index")
     public R index(@RequestParam(required = false) Long id) {
         R success = R.success();
         List<VanTreeSelectVo> categoryList = iCategoryService.selectL1Category();
-        Category currentCategory;
-        List<VanTreeSelectVo> subCategoryList;
-        if (Objects.isNull(id) && categoryList.size() > 0) {
-            currentCategory = iCategoryService.getById(categoryList.get(0).getId());
-            subCategoryList = iCategoryService.selectCategoryByPid(currentCategory.getId());
+        Callable<Category> currentCategoryCallable;
+        Callable<List<VanTreeSelectVo>> subCategoryListCallable;
+        if (Objects.isNull(id) && CollectionUtils.isNotEmpty(categoryList)) {
+            currentCategoryCallable = () -> iCategoryService.getById(categoryList.get(0).getId());
+            subCategoryListCallable = () -> iCategoryService.selectCategoryByPid(categoryList.get(0).getId());
         } else {
-            currentCategory = iCategoryService.getById(id);
-            subCategoryList = iCategoryService.selectCategoryByPid(id);
+            currentCategoryCallable = () -> iCategoryService.getById(id);
+            subCategoryListCallable = () -> iCategoryService.selectCategoryByPid(id);
         }
-        success.add("categoryList", categoryList);
-        success.add("currentCategory", currentCategory);
-        success.add("subCategoryList", subCategoryList);
+        FutureTask<Category> currentCategoryTask = new FutureTask<>(currentCategoryCallable);
+        FutureTask<List<VanTreeSelectVo>> subCategoryListTask = new FutureTask<>(subCategoryListCallable);
+        categoryThreadPoolTaskExecutor.submit(currentCategoryTask);
+        categoryThreadPoolTaskExecutor.submit(subCategoryListTask);
+        try {
+            success.add("categoryList", categoryList);
+            success.add("currentCategory", currentCategoryTask.get());
+            success.add("subCategoryList", subCategoryListTask.get());
+        } catch (Exception e) {
+            log.error(e.getMessage(), e);
+        }
         return success;
     }
 
     @GetMapping("content")
     public R content(Long id) {
+        long begin = System.currentTimeMillis();
         R success = R.success();
-        Category currentCategory = iCategoryService.getById(id);
-        List<VanTreeSelectVo> subCategoryList = iCategoryService.selectCategoryByPid(id);
-        success.add("currentCategory", currentCategory);
-        success.add("subCategoryList", subCategoryList);
+        Callable<Category> currentCategoryCallable = () -> iCategoryService.getById(id);
+        Callable<List<VanTreeSelectVo>> subCategoryListCallable = () -> iCategoryService.selectCategoryByPid(id);
+        FutureTask<Category> currentCategoryTask = new FutureTask<>(currentCategoryCallable);
+        FutureTask<List<VanTreeSelectVo>> subCategoryListTask = new FutureTask<>(subCategoryListCallable);
+        categoryThreadPoolTaskExecutor.submit(currentCategoryTask);
+        categoryThreadPoolTaskExecutor.submit(subCategoryListTask);
+        try {
+            success.add("currentCategory", currentCategoryTask.get());
+            success.add("subCategoryList", subCategoryListTask.get());
+        } catch (Exception e) {
+            log.error(e.getMessage(), e);
+        }
+        long end = System.currentTimeMillis();
+        log.info("content time:{}", end - begin);
         return success;
     }
 
@@ -72,7 +95,7 @@ public class CategoryController extends BaseController {
     @GetMapping("secondCategoryGoods")
     public R secondCateGoods(@RequestParam(defaultValue = "0") Long cateId) {
         Page<Goods> page = getPage();
-        List<Long> cateList = Arrays.asList(cateId);
+        List<Long> cateList = List.of(cateId);
         R success = iGoodsService.selectListPageByCateIds(page, cateList);
         success.add("category", iCategoryService.getById(cateId));
         return success;
